[workspace]
resolver = "2"
members = [
  "contracts/mock-ohloss",
  "contracts/twenty-one",
  "contracts/number-guess",
  "contracts/dice-duel",
]

[workspace.dependencies]
soroban-sdk = "23.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
