[package]
name = "ohloss"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
blend-contract-sdk = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
fee-vault-v2 = { workspace = true, features = ["testutils"] }
number-guess = { path = "../number-guess" }
